// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage should render correctly 1`] = `
<div
  className="homepage"
  data-testid="homepage-container"
>
  <CoordinateForm
    coords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    initCoords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    setCoordinates={[Function]}
    setZoom={[Function]}
    zoom={15}
  />
  <Weather
    coords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
  />
  <Map
    coords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    coordsHandler={[Function]}
    zoom={15}
    zoomHandler={[Function]}
  />
</div>
`;

exports[`Homepage should render correctly 2`] = `
<div
  className="homepage"
  data-testid="homepage-container"
>
  <CoordinateForm
    coords={
      Object {
        "lat": 10,
        "lng": 15,
      }
    }
    initCoords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    setCoordinates={[Function]}
    setZoom={[Function]}
    zoom={15}
  />
  <Weather
    coords={
      Object {
        "lat": 10,
        "lng": 15,
      }
    }
  />
  <Map
    coords={
      Object {
        "lat": 10,
        "lng": 15,
      }
    }
    coordsHandler={[Function]}
    zoom={15}
    zoomHandler={[Function]}
  />
</div>
`;

exports[`Homepage should render correctly 3`] = `
<div
  className="homepage"
  data-testid="homepage-container"
>
  <CoordinateForm
    coords={
      Object {
        "lat": 10,
        "lng": 15,
      }
    }
    initCoords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    setCoordinates={[Function]}
    setZoom={[Function]}
    zoom={10}
  />
  <Weather
    coords={
      Object {
        "lat": 10,
        "lng": 15,
      }
    }
  />
  <Map
    coords={
      Object {
        "lat": 10,
        "lng": 15,
      }
    }
    coordsHandler={[Function]}
    zoom={10}
    zoomHandler={[Function]}
  />
</div>
`;

exports[`Homepage should render correctly 4`] = `
<div
  className="homepage"
  data-testid="homepage-container"
>
  <CoordinateForm
    coords={10}
    initCoords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    setCoordinates={[Function]}
    setZoom={[Function]}
    zoom={10}
  />
  <Weather
    coords={10}
  />
  <Map
    coords={10}
    coordsHandler={[Function]}
    zoom={10}
    zoomHandler={[Function]}
  />
</div>
`;

exports[`Homepage should render correctly 5`] = `
<div
  className="homepage"
  data-testid="homepage-container"
>
  <CoordinateForm
    coords={10}
    initCoords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    setCoordinates={[Function]}
    setZoom={[Function]}
    zoom={10}
  />
  <Weather
    coords={10}
  />
  <Map
    coords={10}
    coordsHandler={[Function]}
    zoom={10}
    zoomHandler={[Function]}
  />
</div>
`;

exports[`Homepage should render correctly on navigation permission 1`] = `
<div
  className="homepage"
  data-testid="homepage-container"
>
  <CoordinateForm
    coords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    initCoords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    setCoordinates={[Function]}
    setZoom={[Function]}
    zoom={15}
  />
  <Weather
    coords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
  />
  <Map
    coords={
      Object {
        "lat": 39.887710232733696,
        "lng": -75.17592430114746,
      }
    }
    coordsHandler={[Function]}
    zoom={15}
    zoomHandler={[Function]}
  />
</div>
`;
